--- a/CST136SRS04/Atoll/Atoll.vcxproj
+++ b/CST136SRS04/Atoll/Atoll.vcxproj
@@ -152,16 +152,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Angle.h" />
-    <ClInclude Include="Location.h" />
+    <ClInclude Include="GPS.h" />
     <ClInclude Include="Range.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Angle.cpp" />
+    <ClCompile Include="GPS.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Location.cpp" />
     <ClCompile Include="Range.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
